syntax = "proto3";

package musthave_metrics;

option go_package = "github.com/gam6itko/go-musthave-metrics/proto";

message CounterIncRequest {
  string name = 1;
  int64 value = 2;
}
message CounterIncResponse {
  string error = 1;
}

message CounterGetRequest {
  string name = 1;
}
message CounterGetResponse {
  int64 value = 1;
  string error = 2;
}

message GaugeSetRequest {
  string name = 1;
  double value = 2;
}
message GaugeSetResponse {
  string error = 1;
}

message GaugeGetRequest {
  string name = 1;
}
message GaugeGetResponse {
  double value = 1;
  string error = 2;
}

service Metrics {
  rpc CounterInc(CounterIncRequest) returns (CounterIncResponse);
  rpc CounterGet(CounterGetRequest) returns (CounterGetResponse);
  rpc GaugeSet(GaugeSetRequest) returns (GaugeSetResponse);
  rpc GaugeGet(GaugeGetRequest) returns (GaugeGetResponse);
}